# nest-sol

./: Cargo.toml  README.md  bun.lockb  package.json
agents/: bun.lockb  package.json
circuits/: bun.lockb  package.json
client/: package.json
indexer/: README.md  bun.lockb  package.json
programs/: .gitignore  Anchor.toml  package.json
programs/programs/nest-programs/: Cargo.toml
programs/programs/nest-programs/src/: lib.rs
programs/programs/nest-programs/src/instructions/: admin.rs
programs/programs/nest-programs/src/state/: game.rs  holon.rs  mod.rs  nation.rs
programs/tests/: nest-programs.ts
