[package]
name = "nest-programs"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nest_programs"

[features]
default = []
custom-heap = []
no-entrypoint = []
cpi = ["no-entrypoint"]
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"